@@ -1,3 +1,8 @@
+2006-03-28  Eric Viara  <viara@sysra.com>
+
+	* Fixed a bug when database has reached its maximum size
+	* Fixed a problem with getpid()
+
 2006-03-28  Francois Dechelle <francois@dechelle.net>
 
 	* Fixed some remaining problems w.r.t Mac OS X. Now, runs the 'Getting Started' example.
